@@ -1,5 +1,5 @@
-/* FieldView.java -- 
-   Copyright (C) 2004 Free Software Foundation, Inc.
+/* BasicTextAreaUI.java -- 
+   Copyright (C) 2004  Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
 
@@ -36,62 +36,26 @@ obligated to do so.  If you do not wish to do so, delete this
 exception statement from your version. */
 
 
-package javax.swing.text;
+package javax.swing.plaf.basic;
 
-import java.awt.Component;
-import java.awt.FontMetrics;
-import java.awt.Graphics;
-import java.awt.Shape;
+import java.beans.PropertyChangeEvent;
 
+import javax.swing.JComponent;
+import javax.swing.plaf.ComponentUI;
 
-public class FieldView extends PlainView
+public class BasicTextAreaUI extends BasicTextUI
 {
-  public FieldView(Element elem)
+  public static ComponentUI createUI(JComponent comp)
   {
-    super(elem);
+    return new BasicTextAreaUI();
   }
 
-  protected FontMetrics getFontMetrics()
+  public BasicTextAreaUI()
   {
-    Component container = getContainer();
-    return container.getFontMetrics(container.getFont());
   }
 
-  public float getPreferredSpan(int axis)
+  protected String getPropertyPrefix()
   {
-    if (axis != X_AXIS && axis != Y_AXIS)
-      throw new IllegalArgumentException();
-
-    FontMetrics fm = getFontMetrics();
-
-    if (axis == Y_AXIS)
-      return fm.getHeight();
-
-    String text;
-    Element elem = getElement();
-
-    try
-      {
-	text = elem.getDocument().getText(elem.getStartOffset(),
-					  elem.getEndOffset());
-      }
-    catch (BadLocationException e)
-      {
-	// This should never happen.
-	text = "";
-	System.out.println("Michael: FieldView.getPreferredSpan: Error");
-      }
-    
-    return fm.stringWidth(text);
-  }
-
-  public int getResizeWeight(int axis)
-  {
-    return axis = axis == X_AXIS ? 1 : 0;
-  }
-  
-  public void paint(Graphics g, Shape s)
-  {
-    super.paint(g, s);
+    return "TextArea";
   }
 }
